public abstract class AMedia {
}
