import java.util.ArrayList;
import java.util.Scanner;

public class FileIO implements FileEditor{

    Scanner scan;

   public ArrayList<Media> readMediaData(String path){

       return null;
   }


    public void writeUserData() {

    }


}
