public interface Media {
     public void Play();


}
