public class Movie extends AMedia{

    public void Play(){


    }

    @Override
    public String toString(){
        return null;
    }
}
