import java.util.HashMap;

public class Series extends AMedia {
    int seasonAmount;
    private HashMap<Integer,Integer> seasonEpisodeAmount;

    public void Play(){

    }
    @Override
    public String toString(){
        return null;
    }
}
