import org.w3c.dom.Text;

import java.util.ArrayList;

public class StreamingService {
    private ArrayList<User> users;

    private  TextUI ui;

    public void startMenu(){


    }
    public void mainMenu(){

    }
    public void searchMedia(){

    }
    private void signUp(){

    }
    private void logIn(){

    }
}
