import java.util.Scanner;

public class TextUI {

    Scanner scan;

    public void displayMessage(String msg){

    }
    public String getInput(String msg){
        return null;
    }

}
