import java.util.ArrayList;

public class User {
   private Boolean administrator;
   private String username;
   private String password;
   private ArrayList<Media> toWatchList;
   private  ArrayList<Media> watchedList;

   public void addToWatchList(Media media){

    }
    public  ArrayList<Media> watchedList(){
       return null;
    }
    public ArrayList<Media> toWatchList(){
       return null;
    }
    void addMedia(){

    }
}
